<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.timetable1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_authors"
        android:name="com.example.timetable1.ui.gallery.GalleryFragment"
        android:label="@string/menu_authors"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_subject_list"
        android:name="com.example.timetable1.fragments.SubjectListFragment"
        android:label="@string/menu_subject_list"
        tools:layout="@layout/fragment_subject_list" />

    <fragment
        android:id="@+id/nav_to_do_list"
        android:name="com.example.timetable1.fragments.ToDoFragment"
        android:label="@string/menu_to_do_list"
        tools:layout="@layout/fragment_to_do" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.timetable1.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>