<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switchNotifications"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:checked="false"
            android:showText="false"
            android:splitTrack="false"
            android:text="@string/notifications" />

        <LinearLayout
            android:id="@+id/deleteAllDataLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/deleteAllData"
                android:theme="@style/TextColorBlack" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/exportDataLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/backupExport"
                android:theme="@style/TextColorBlack" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exportTimatebleLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/timatebleExport"
                android:theme="@style/TextColorBlack" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/importDataLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/backupImport"
                android:theme="@style/TextColorBlack" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>