<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/WindowBackgroundd"
    tools:context=".fragments.ToDoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/resizingAddTodoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/button_transparent_backgroun"
            android:elevation="5dp"
            android:text="@string/addToDo" />

        <LinearLayout
            android:id="@+id/resizingAddTodoConctrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:orientation="vertical"
            android:theme="@style/DarkerItem"
            android:visibility="gone">

            <EditText
                android:id="@+id/editTodoTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/topicEnter"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/editTodoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/descriptionEnter"
                android:inputType="textMultiLine"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/border"
                    android:theme="@style/Transparent" />

                <Spinner
                    android:id="@+id/spinnerBorderTodo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/addTodoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/button_transparent_backgroun"
                android:text="@string/addToDo" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todosView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:theme="@style/Transparent">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>