<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ReviewTextNotesActivity">

    <Space
        android:id="@+id/space2"
        android:layout_width="0dp"
        android:layout_height="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resizingAddTextNoteButton"
        android:layout_width="54dp"
        android:layout_height="45dp"
        android:background="@drawable/button_transparent_backgroun"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2" />

    <EditText
        android:id="@+id/editFindNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Find"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/resizingAddTextNoteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todosView"
        android:layout_width="414dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resizingAddTextNoteConstrain">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resizingAddTextNoteConstrain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_items"
        android:padding="5dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFindNote">

        <EditText
            android:id="@+id/editTopic"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/topicEnter"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editLongNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/noteEnter"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addLongTextNoteButton" />

        <Button
            android:id="@+id/addLongTextNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_transparent_backgroun"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/addNote"
            android:theme="@style/TextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTopic"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/exportNotesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_transparent_backgroun"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/exportToTextFile"
            android:theme="@style/TextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLongNote" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>