<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subjectAllConstrain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_items"
        android:elevation="1dp"
        android:theme="@style/TextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/subjectHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="8.00 - 9.30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="Przedmiot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/sizeOfSubject"
            android:layout_width="43dp"
            android:layout_height="57dp"
            android:layout_marginStart="28dp"
            app:layout_constraintStart_toEndOf="@+id/subjectName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/roomNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:text="aaaaaa"
            app:layout_constraintStart_toEndOf="@+id/inRoom"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/inRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/inRoom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.274"
            app:layout_constraintStart_toEndOf="@+id/subjectHours"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/resizingSubjectConstrain"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="56dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addNoteButton"
                        android:layout_width="103dp"
                        android:layout_height="37dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/button_transparent_backgroun"
                        android:text="@string/addNote"
                        android:textAllCaps="false"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/delNoteButton"
                        android:layout_width="103dp"
                        android:layout_height="37dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/button_transparent_backgroun"
                        android:text="@string/delNote"
                        android:textAllCaps="false"
                        android:visibility="visible" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/delButton"
                        android:layout_width="49dp"
                        android:layout_height="37dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/button_transparent_backgroun"
                        android:text="X"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/editNoteLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editNote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="9dp"
                        android:backgroundTint="@color/colorAccent"
                        android:ems="10"
                        android:hint="@string/editNote"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/noteType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:popupBackground="@drawable/gradient_items"
                        android:popupElevation="14dp"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <TextView
                    android:id="@+id/subjectNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="notatka" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>